# athena-code

./: .gitignore  README.md  dependencies.sh  requirements.txt
.github/workflows/: main.yml
bringup/: CMakeLists.txt
src/description/: CMakeLists.txt
src/description/config/: joint_names_athena_arm.yaml  mock.ros2_control.xacro  odrive.ros2_control.xacro
src/description/meshes/: actuator.STL  base.STL  bicep.STL  bracket_back2_link.STL  bracket_back_link.STL  bracket_front2_link.STL  bracket_front_link.STL  chassis_base_link.STL  forearm.STL  shoulder.STL  suspension_left_link.STL  suspension_right_link.STL  swerve_back2_link.STL  swerve_back_link.STL  swerve_front2_link.STL  swerve_front_link.STL  swerve_module_back2_link.STL  swerve_module_back_link.STL  swerve_module_front2_link.STL  swerve_module_front_link.STL  wheel_back2_link.STL  wheel_back_link.STL  wheel_front2_link.STL  wheel_front_link.STL
src/description/ros2_control/arm/: arm.actuator.ros2_control.xacro  arm.rmd.ros2_control.xacro  arm.smc.ros2_control.xacro  arm.talon.ros2_control.xacro
src/description/ros2_control/drive/: drive.odrive.ros2_control.xacro  drive.rmd.ros2_control.xacro
src/description/rviz/: athena_drive.rviz  new_athena_drive.rviz  rviz_config.rviz
src/description/urdf/: athena_drive.urdf.xacro  athena_drive_description.urdf.xacro  depth_camera.xacro  gps.xacro  ground_truth_odom.xacro  imu.xacro
src/description/urdf/athena_drive/: athena_drive_macro.ros2_control.xacro
src/description/worlds/: empty.sdf
src/hardware_interfaces/actuator_ros2_control/: CMakeLists.txt  actuator_hardware_interface.xml  package.xml
src/hardware_interfaces/actuator_ros2_control/include/actuator_ros2_control/: actuator_hardware_interface.hpp
src/hardware_interfaces/actuator_ros2_control/src/: actuator_hardware_interface.cpp
src/hardware_interfaces/rmd_ros2_control/: CMakeLists.txt  package.xml
src/hardware_interfaces/rmd_ros2_control/include/rmd_ros2_control/: rmd_hardware_interface.hpp
src/hardware_interfaces/rmd_ros2_control/src/: rmd_hardware_interface.cpp
src/hardware_interfaces/smc_ros2_control/: CMakeLists.txt  package.xml
src/hardware_interfaces/smc_ros2_control/include/smc_ros2_control/: smc_hardware_interface.hpp
src/hardware_interfaces/smc_ros2_control/src/: smc_hardware_interface.cpp
src/hardware_interfaces/talon_ros2_control/: COLCON_IGNORE  package.xml
src/infrastructure/umdloop_can/: README.md  package.xml  setup.cfg  setup.py
src/infrastructure/umdloop_can/launch/: can.rover.launch.py  can_node.launch.py
src/infrastructure/umdloop_can/umdloop_can/: can_interface.py  can_node.py
src/infrastructure/umdloop_can_library/: CMakeLists.txt  package.xml  umdloop_can_libraryConfig.cmake.in
src/infrastructure/umdloop_can_library/include/umdloop_can_library/: CanFrame.hpp  ICanBus.hpp  SerialCanBus.hpp  SocketCanBus.hpp
src/infrastructure/umdloop_can_library/src/: SerialCanBus.cpp  SocketCanBus.cpp
src/msgs/: CMakeLists.txt
src/msgs/msg/: CANA.msg  Currentdraw.msg  JointReceiver.msg  SystemInfo.msg
src/msgs/srv/: SetController.srv
src/simulation/launch/: bridge.launch.py  gz_sim.launch.py
src/subsystems/arm/: README.md
src/subsystems/arm/arm_bringup/config/: initial_joint_states.yaml  joystick.yaml
src/subsystems/arm/arm_controllers/: CMakeLists.txt  athena_arm_controllers.xml
src/subsystems/arm/arm_controllers/config/: manual_arm_cylindrical_controller.yaml  manual_arm_joint_by_joint_controller.yaml
src/subsystems/arm/arm_controllers/src/: manual_arm_cylindrical_controller.cpp  manual_arm_joint_by_joint_controller.cpp  velocity_calculations.cpp
src/subsystems/arm/arm_controllers/test/: manual_arm_cylindrical_controller_params.yaml  manual_arm_cylindrical_controller_preceeding_params.yaml  manual_arm_joint_by_joint_controller_params.yaml  manual_arm_joint_by_joint_controller_preceeding_params.yaml  test_manual_arm_cylindrical_controller.hpp  test_manual_arm_joint_by_joint_controller.hpp  validate_manual_arm_joint_by_joint_controller_parameters.hpp
src/subsystems/drive/: README.md
src/subsystems/drive/drive/: package.xml  setup.py
src/subsystems/drive/drive_controllers/: CMakeLists.txt  athena_drive_controllers.xml  package.xml
src/subsystems/drive/jank_drive/: README.md  package.xml  setup.cfg  setup.py
src/subsystems/drive/jank_drive/jank_drive/: jank_drive.py  jank_joystick.py
src/subsystems/drive/jank_drive/launch/: jank_drive.launch.py
src/subsystems/drive/rmd_thrust_control/: package.xml  setup.cfg  setup.py
src/subsystems/navigation/: README.md
src/subsystems/navigation/aruco_detection/: package.xml  setup.py
src/subsystems/navigation/athena_map/: package.xml
src/subsystems/navigation/athena_planner/: package.xml
src/subsystems/navigation/localizer/: CMakeLists.txt  package.xml
src/subsystems/navigation/localizer/config/: localizer.yaml
src/subsystems/navigation/localizer/include/localizer/: state_estimator.h
src/subsystems/navigation/localizer/launch/: localizer.launch.py
src/subsystems/navigation/localizer/src/: state_estimator.cpp
src/subsystems/navigation/obstacle_detection/: CMakeLists.txt  package.xml
src/subsystems/navigation/obstacle_detection/cfg/: solo_local_costmap.yaml
src/subsystems/navigation/obstacle_detection/launch/: solo_local_costmap.launch.py
src/subsystems/navigation/obstacle_detection/src/: obstacle_filter_node.cpp
src/subsystems/navigation/yolo_ros/: package.xml  setup.py
src/subsystems/science/: README.md
src/subsystems/science/science_controllers/: athena_science_controllers.xml
src/teleop/teleop/: package.xml  setup.py
src/teleop/teleop/teleop/: joystick_publisher.py
subsystems/drive/drive_controllers/src/: single_ackermann_controller.cpp  swerve_drive_controller.cpp
subsystems/science/science_controllers/: CMakeLists.txt
(+56 files in other folders)
