<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>localizer</name>
    <version>0.0.0</version>
    <description>IMU-GNSS fusion state estimator using GTSAM</description>
    <maintainer email="mdurrani808@gmail.com">ros</maintainer>
    <license>TODO: License declaration</license>

    <depend>gtsam</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>eigen3_cmake_module</depend>
    <build_depend>libboost-serialization-dev</build_depend>
    <build_depend>libboost-system-dev</build_depend>
    <build_depend>libboost-filesystem-dev</build_depend>
    <build_depend>libboost-thread-dev</build_depend>
    <build_depend>libboost-program-options-dev</build_depend>
    <build_depend>libboost-date-time-dev</build_depend>
    <build_depend>libboost-timer-dev</build_depend>
    <build_depend>libboost-chrono-dev</build_depend>
    <build_depend>libboost-regex-dev</build_depend>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
